force-app/main/default/objects/Pay_Slip__c.object
<CustomObject>
    <fields>
        <fullName>Generate_Pay_Slip_On__c</fullName>
        <description>Required to control the date on which a pay slip is generated. Added to address the issue with &apos;housing&apos; pay slips where the &apos;to&apos; field could be several months in advance e.g. when housing is paid termly in advance</description>
        <label>Generate Pay Slip On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Health_Insurance__c</fullName>
        <label>Health Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Housing_Allowance__c</fullName>
        <label>Housing Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Housing_Cost_Paid_by_School__c</fullName>
        <label>Housing Paid by School</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Tax_Paid_by_Employee__c</fullName>
        <label>Income Tax Paid by Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Message_to_Employee__c</fullName>
        <label>Message to Employee</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Net_Exchange_Rate_Gain_Loss__c</fullName>
        <formula>IF( Exchange_Rate_Managment__c =FALSE,0,IF( TEXT(Employment_Agreement__r.CurrencyIsoCode)= TEXT(CurrencyIsoCode),0, Salary_Base_Currency__c+ (Refund_Exchange_Rate_Differences__c/ Exchange_Rate__c ) - (Deduction_Exchange_Rate_Differences__c /Exchange_Rate__c ) -  Employment_Agreement__r.Monthly_Salary_12_Months__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Exchange Rate Gain/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Bonus_Amount__c</fullName>
        <label>Other Bonus Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Bonus_Name__c</fullName>
        <label>Other Bonus Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Taxes_Paid_by_School__c</fullName>
        <label>Income/Other Taxes Paid by School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>Employment_Agreement__r.Staff_Member__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_ID_Number__c</fullName>
        <formula>Employment_Agreement__r.Staff_Member__r.ID_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passport/ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payslip_Template_ID__c</fullName>
        <description>Defines the template ID to be used in the Java Script on the email payslip custom button</description>
        <formula>IF(
   School__c = &quot;The British International School of Kuala Lumpur&quot;,
   &quot;00X6F000001H1rE&amp;p5&quot;, 
   &quot;00X6F000001H2V1&amp;p5&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payslip Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Bonus__c</fullName>
        <label>Performance Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>Employment_Agreement__r.Position_in_Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Exchange_Rate_Differences__c</fullName>
        <label>Refund Exchange Rate Differences</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Travel_Visa_Expenses__c</fullName>
        <label>Refund Travel/Visa Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Relocation_Allowance__c</fullName>
        <label>Relocation Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Responsibility_Points__c</fullName>
        <label>Responsibility Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retention_Bonus__c</fullName>
        <label>Retention Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salary_Base_Currency__c</fullName>
        <formula>Salary__c  / Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salary Base Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Employment_Agreement__r.School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Paid_by_Employee__c</fullName>
        <label>Social Security Paid by Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Social_Security_Paid_by_School__c</fullName>
        <label>Social Security Paid by School</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Staff_Email__c</fullName>
        <label>Staff Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Staff_Member_Name__c</fullName>
        <formula>Employment_Agreement__r.Staff_Member_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Income_Item_1__c</fullName>
        <label>Description Income Item 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_to_be_Paid_Workflow_generated__c</fullName>
        <label>Total to be Paid (Workflow generated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_to_be_Paid__c</fullName>
        <formula>Salary__c  + Responsibility_Points__c + Housing_Allowance__c + Travel_Allowance__c + Relocation_Allowance__c + Refund_Travel_Visa_Expenses__c + Performance_Bonus__c + Retention_Bonus__c + Other_Bonus_Amount__c + Amount_Income_Item_1__c + Amount_Income_Item_2__c + Refund_Exchange_Rate_Differences__c - Amount_Deduction_Item_1__c - Amount_Deduction_Item_2__c - Income_Tax_Paid_by_Employee__c - Social_Security_Paid_by_Employee__c - Deduction_Exchange_Rate_Differences__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total to be Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Allowance__c</fullName>
        <label>Travel Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Pay Slip</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Pay Slip Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Slips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Enter_From</fullName>
        <active>true</active>
        <errorConditionFormula>From__c =Null</errorConditionFormula>
        <errorDisplayField>From__c</errorDisplayField>
        <errorMessage>You must en a date FROM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_To</fullName>
        <active>true</active>
        <errorConditionFormula>To__c =Null</errorConditionFormula>
        <errorDisplayField>To__c</errorDisplayField>
        <errorMessage>You must en a date TO</errorMessage>
    </validationRules>
</CustomObject>